Resolve "Remove player from replays REST resource or consider player as a component of Replay"
